--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "dev": "vite --mode dev  --host 0.0.0.0",
+    "dev": "vite --mode dev",
     "build": "vite build --mode prod",
     "build:test": "vite build --mode test",
     "build:prod": "vite build --mode prod",
@@ -18,6 +18,6 @@
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.2.3",
     "unplugin-vue-components": "^0.24.1",
-    "vite": "^4.3.5"
+    "vite": "^4.3.9"
   }
 }
